; ModuleID = '/home/carl/AnghaBench/git/extr_date.c_date_tea.c'
source_filename = "/home/carl/AnghaBench/git/extr_date.c_date_tea.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tm*, %struct.tm*, i32*)* @date_tea to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @date_tea(%struct.tm* %0, %struct.tm* %1, i32* %2) #0 {
  %4 = alloca %struct.tm*, align 8
  %5 = alloca %struct.tm*, align 8
  %6 = alloca i32*, align 8
  store %struct.tm* %0, %struct.tm** %4, align 8
  store %struct.tm* %1, %struct.tm** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.tm*, %struct.tm** %4, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = call i32 @pending_number(%struct.tm* %7, i32* %8)
  %10 = load %struct.tm*, %struct.tm** %4, align 8
  %11 = load %struct.tm*, %struct.tm** %5, align 8
  %12 = call i32 @date_time(%struct.tm* %10, %struct.tm* %11, i32 17)
  ret void
}

declare dso_local i32 @pending_number(%struct.tm*, i32*) #1

declare dso_local i32 @date_time(%struct.tm*, %struct.tm*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
